--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,7 +15,7 @@
 						alt="Slider image" />
 					<!-- LAYERS -->
 
-					<!-- LAYER NR. 1 -->
+					{{!-- <!-- LAYER NR. 1 -->
 					<a href="/product/list" class="tp-caption rev-btn  tp-resizeme" data-x="['left','left','left','left']"
 						data-hoffset="['170','120','70','40']" data-y="['middle','middle','middle','middle']"
 						data-voffset="['150','150','150','110']" data-width="150px" data-height="50px"
@@ -48,7 +48,7 @@
 						data-paddingright="[20,20,20,20]" data-paddingbottom="[30,30,30,30]"
 						data-paddingleft="[20,20,20,20]"
 						style="z-index: 8; min-width: 650px; max-width: 650px; white-space: normal; font-size: 70px; line-height: 70px; font-weight: 400; color: #ffffff; letter-spacing: -2px;font-family:Playfair Display;">
-						The force of nature felt in waves crashing. </div>
+						The force of nature felt in waves crashing. </div> --}}
 				</li>
 				<!-- SLIDE  -->
 				<li data-index="rs-74" data-transition="fade" data-slotamount="default" data-hideafterloop="0"
@@ -62,7 +62,7 @@
 
 
 
-					<!-- LAYER NR. 6 -->
+					{{!-- <!-- LAYER NR. 6 -->
 					<a href="/product/list" class="tp-caption rev-btn  tp-resizeme" data-x="['left','left','left','left']"
 						data-hoffset="['880','760','600','330']" data-y="['middle','middle','middle','middle']"
 						data-voffset="['120','250','150','110']" data-width="150px" data-height="50px"
@@ -96,7 +96,7 @@
 						data-paddingleft="[20,20,20,20]"
 						style="z-index: 8; min-width: 650px; max-width: 650px; white-space: normal; font-size: 70px; line-height: 70px; font-weight: 400; color: #ffffff; letter-spacing: -2px;font-family:Playfair Display;">
 						The beauty of nature is hidden in details.
-					</div>
+					</div> --}}
 				</li>
 				<!-- SLIDE  -->
 				<li data-index="rs-75" data-transition="fade" data-slotamount="default" data-hideafterloop="0"
@@ -111,7 +111,7 @@
 					<!-- LAYERS -->
 
 
-					<!-- LAYER NR. 10 -->
+					{{!-- <!-- LAYER NR. 10 -->
 					<div class="tp-caption   tp-resizeme" id="slide-75-layer-2"
 						data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
 						data-y="['middle','middle','middle','middle']" data-voffset="['-100','-100','-100','-90']"
@@ -147,7 +147,7 @@
 						data-textAlign="['center','center','center','center']" data-paddingtop="[6,6,6,6]"
 						style="z-index: 8; white-space: normal; font-size: 22px; line-height: 50px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: 2px;font-family:Roboto Condensed;border-color:rgb(255,255,255);border-style:solid;border-width:1px 1px 1px 1px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-align:center!important;">
 						Shop Now
-					</div>
+					</div> --}}
 				</li>
 			</ul>
 			<div class="tp-bannertimer" style="height: 10px; background: rgba(0, 0, 0, 0.15);"></div>
