--- a/views/user/reset-password.hbs
+++ b/views/user/reset-password.hbs
@@ -4,12 +4,17 @@
       <div class="col-md-6 col-md-offset-3">
         <div class="block text-center">
           <h2 class="text-center">Reset mật khẩu</h2>
+          {{#if this.alert}}
+          {{#with alert}}
+          {{{createAlert this}}}
+          {{/with}}
+          {{/if}}
           <form method='POST' class="text-left clearfix">
             <div class="form-group">
-              <input name="email" type="password" class="form-control" id="exampleInputEmail1" placeholder="Nhập mật khẩu mới">
+              <input name="pass" type="password" class="form-control" id="exampleInputEmail1" placeholder="Nhập mật khẩu mới">
             </div>
             <div class="form-group">
-              <input name="email" type="password" class="form-control" id="exampleInputEmail1" placeholder="Xác nhận lại mật khẩu">
+              <input name="confirmPass" type="password" class="form-control" id="exampleInputEmail1" placeholder="Xác nhận lại mật khẩu">
             </div>
             <div class="text-center">
               <button type="submit" class="btn btn-main text-center">Làm mới mật khẩu</button>
