--- a/views/dashboard/profile.hbs
+++ b/views/dashboard/profile.hbs
@@ -14,23 +14,24 @@
                             <a href="#x" class="btn btn-transparent mt-20">Thay đổi ảnh đại diện</a>
                         </div>
                         <div class="media-body">
-                            <form class="checkout-form">
+                            <form method="POST" class="checkout-form">
                                 <div class="form-group">
                                     <label for="full_name">Họ và tên</label>
-                                    <input type="text" class="form-control" id="full_name" placeholder=""
-                                        value="Đoàn Nguyễn Tấn Phúc">
+                                    <input name="full_name" type="text" class="form-control" id="full_name" placeholder=""
+                                        value={{fullname}}>
                                 </div>
                                 <div class="form-group">
                                     <label for="user_address">Địa chỉ</label>
-                                    <input type="text" class="form-control" id="user_address" placeholder=""
+                                    <input name="user_address" type="text" class="form-control" id="user_address" placeholder=""
                                         value="227 Đường Nguyễn Văn Cừ, Phường 4, Quận 5, Hồ Chí Minh">
                                 </div>
                                 <div class="form-group">
                                     <label for="phone_number">Số điện thoại</label>
-                                    <input type="tel" class="form-control" id="phone_number" placeholder=""
-                                        value="0949645703">
+                                    <input name="phone_number" type="tel" class="form-control" id="phone_number" placeholder=""
+                                        value={{phone}}>
                                 </div>
-                             <a href="#" class="btn btn-main mt-20">Lưu và sửa đổi</a>
+                             <!-- <a href="#" class="btn btn-main mt-20">Lưu và sửa đổi</a> -->
+                             <button type="submit" class="btn btn-main text-center">Lưu và sửa đổi</button>
                             </form>
                         </div>
                     </div>
