thay doi mat khau

--- a/views/dashboard/address.hbs
+++ b/views/dashboard/address.hbs
@@ -6,6 +6,7 @@
                     <li><a href="/dashboard/history">Lịch sử mua hàng</a></li>
                     <li><a class="active" href="/dashboard/address">Địa chỉ giao hàng</a></li>
                     <li><a href="/dashboard/profile">Thông tin cá nhân</a></li>
+                    <li><a href="/dashboard/changePass">Thay đổi mật khẩu</a></li>
                 </ul>
                 <div class="dashboard-wrapper user-dashboard">
                     <div class="table-responsive">
