--- a/views/dashboard/profile.hbs
+++ b/views/dashboard/profile.hbs
@@ -6,6 +6,7 @@
                     <li><a href="/dashboard/history">Lịch sử mua hàng</a></li>
                     <li><a href="/dashboard/address">Địa chỉ giao hàng</a></li>
                     <li><a class="active" href="/dashboard/profile">Thông tin cá nhân</a></li>
+                    <li><a href="/dashboard/changePass">Thay đổi mật khẩu</a></li>
                 </ul>
                 <div class="dashboard-wrapper dashboard-user-profile">
                     <div class="media">
@@ -18,7 +19,7 @@
                                 <div class="form-group">
                                     <label for="full_name">Họ và tên</label>
                                     <input name="full_name" type="text" class="form-control" id="full_name" placeholder=""
-                                        value={{fullname}}>
+                                        value="{{fullname}}">
                                 </div>
                                 <div class="form-group">
                                     <label for="user_address">Địa chỉ</label>
@@ -28,7 +29,7 @@
                                 <div class="form-group">
                                     <label for="phone_number">Số điện thoại</label>
                                     <input name="phone_number" type="tel" class="form-control" id="phone_number" placeholder=""
-                                        value={{phone}}>
+                                        value="{{phone}}">
                                 </div>
                              <!-- <a href="#" class="btn btn-main mt-20">Lưu và sửa đổi</a> -->
                              <button type="submit" class="btn btn-main text-center">Lưu và sửa đổi</button>
