kich hoat tai khoan

--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -9,6 +9,7 @@
           {{{createAlert this}}}
           {{/with}}
           {{/if}}
+</div>
           <form method='POST' class="text-left clearfix" action="#">
             <div class="form-group">
               <input name='username' type="text" class="form-control" placeholder="Ten dang nhap">
