fix 404 reset-pass and forget-pass

--- a/views/user/register.hbs
+++ b/views/user/register.hbs
@@ -27,7 +27,7 @@
             </div>
           </form>
           <p class="mt-20">Đã có tài khoản ?<a href="/user/login"> <u>Đăng nhập</u></a></p>
-          <p><a href="/user/forget-password"> <u>Quên mật khẩu</u></a></p>
+          <p><a href="/user/forgetPassword"> <u>Quên mật khẩu</u></a></p>
         </div>
       </div>
     </div>
