--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -9,7 +9,6 @@
           {{{createAlert this}}}
           {{/with}}
           {{/if}}
-</div>
           <form method='POST' class="text-left clearfix" action="#">
             <div class="form-group">
               <input name='username' type="text" class="form-control" placeholder="Ten dang nhap">
@@ -22,7 +21,7 @@
             </div>
           </form>
           <p class="mt-20">Chưa có tài khoản ?<a href="/user/register"> <u>Tạo tài khoản mới</u></a></p>
-          <p><a href="/user/forget-password"> <u>Quên mật khẩu</u></a></p>
+          <p><a href="/user/forgetPassword"> <u>Quên mật khẩu</u></a></p>
         </div>
       </div>
     </div>
