--- a/views/dashboard/changePass.hbs
+++ b/views/dashboard/changePass.hbs
@@ -18,15 +18,15 @@
                         <div class="media-body">
                             <form method="POST" class="checkout-form">
                                 <div class="form-group">
-                                    <label><strong>Mật khẩu cũ</strong></label>
+                                    <label>Mật khẩu cũ</label>
                                     <input name="oldPass" type="password" class="form-control" placeholder="Nhập mật khẩu cũ">
                                 </div>
                                 <div class="form-group">
-                                    <label><strong>Mật khẩu mới</strong></label>
+                                    <label>Mật khẩu mới</label>
                                     <input name="newPass" type="password" class="form-control" placeholder="Nhập mật khẩu mới">
                                 </div>
                                 <div class="form-group">
-                                    <label><strong>Xác nhận mật khẩu mới</strong></label>
+                                    <label>Xác nhận mật khẩu mới</label>
                                     <input name="confirmPass" type="password" class="form-control" placeholder="Nhập lại mật khẩu mới">
                                 </div>
                              <!-- <a href="#" class="btn btn-main mt-20">Lưu và sửa đổi</a> -->
