--- a/views/partials/productList.hbs
+++ b/views/partials/productList.hbs
@@ -19,7 +19,7 @@
 							<a href="#"><i class="tf-ion-ios-heart"></i></a>
 						</li>
 						<li>
-							<a href="#"><i class="tf-ion-android-cart"></i></a>
+							<a class="btn-addcart" onclick="updateCart('{{this.id}}')"><i class="tf-ion-android-cart"></i></aria-atomic=""></a>
 						</li>
 					</ul>
 				</div>
