--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -109,7 +109,7 @@
 						<!-- Cart -->
 						<li class="dropdown cart-nav dropdown-slide">
 							<a href="/checkout/cart" class="dropdown-toggle" data-toggle="dropdown"
-								data-hover="dropdown" id="my-cart"><i class="tf-ion-android-cart"></i> Giỏ hàng {{#if numberOfItemInCart}}({{{numberOfItemInCart}}}){{/if}}</a>
+								data-hover="dropdown" id="my-cart"><i class="tf-ion-android-cart"></i> Giỏ hàng </a>
 
 							{{!-- Cart items --}}
 							<div class="dropdown-menu cart-dropdown" id="cart-items-main">
