--- a/views/checkout/cart.hbs
+++ b/views/checkout/cart.hbs
@@ -29,12 +29,30 @@
                   <thead>
                     <tr>
                       <th class="">Tên sản phẩm</th>
+											<th class="">Số lượng</th>
                       <th class="">Giá</th>
                       <th class=""></th>
                     </tr>
                   </thead>
                   <tbody>
+										{{#if itemsInMyCart}}
+										{{#each itemsInMyCart}}
                     <tr class="">
+                      <td class="">
+                        <div class="product-info">
+                          <img width="80" src="{{this.img}}" alt="" />
+                          <a href="">{{this.name}}</a>
+                        </div>
+                      </td>
+											<td class="">{{this.quantity}}</td>
+                      <td class="">{{this.price}} đồng</td>
+                      <td class="">
+                        <a class="product-remove" href="/checkout/cart" onclick="deleteItem('{{this.id}}')">Xóa</a>
+                      </td>
+                    </tr>
+										{{/each}}
+										{{/if}}
+                    <!-- <tr class="">
                       <td class="">
                         <div class="product-info">
                           <img width="80" src="/static/images/cart-1.jpg" alt="" />
@@ -57,19 +75,7 @@
                       <td class="">
                         <a class="product-remove" href="">Xóa</a>
                       </td>
-                    </tr>
-                    <tr class="">
-                      <td class="">
-                        <div class="product-info">
-                          <img width="80" src="/static/images/cart-1.jpg" alt="" />
-                          <a href="">Kính nam</a>
-                        </div>
-                      </td>
-                      <td class="">200000 đồng</td>
-                      <td class="">
-                        <a class="product-remove" href="">Xóa</a>
-                      </td>
-                    </tr>
+                    </tr> -->
                   </tbody>
                 </table>
                 <a href="/checkout/payment" class="btn btn-main pull-right">Mua</a>
