--- a/views/checkout/payment.hbs
+++ b/views/checkout/payment.hbs
@@ -23,15 +23,27 @@
                         <form class="checkout-form">
                             <div class="form-group">
                                 <label for="full_name">Họ và tên</label>
+                                {{#if fullname}}
+                                <input type="text" class="form-control" id="full_name" placeholder="" value="{{fullname}}">
+                                {{else}}
                                 <input type="text" class="form-control" id="full_name" placeholder="">
+                                {{/if}}
                             </div>
                             <div class="form-group">
                                 <label for="user_address">Địa chỉ</label>
+                                {{#if address}}
+                                <input type="text" class="form-control" id="user_address" placeholder="" value="{{address}}">
+                                {{else}}
                                 <input type="text" class="form-control" id="user_address" placeholder="">
+                                {{/if}}
                             </div>
                             <div class="form-group">
                                 <label for="phone_number">Số điện thoại</label>
+                                {{#if phone}}
+                                <input type="number" class="form-control" id="phone_number" placeholder="" value="{{phone}}">
+                                {{else}}
                                 <input type="number" class="form-control" id="phone_number" placeholder="">
+                                {{/if}}
                             </div>
                         </form>
                     </div>
