fix minor issue

--- a/views/dashboard/changePass.hbs
+++ b/views/dashboard/changePass.hbs
@@ -19,15 +19,15 @@
                             <form method="POST" class="checkout-form">
                                 <div class="form-group">
                                     <label>Mật khẩu cũ</label>
-                                    <input name="oldPass" type="password" class="form-control" placeholder="Nhập mật khẩu cũ">
+                                    <input name="oldPass" minlength=6 type="password" class="form-control" placeholder="Nhập mật khẩu cũ">
                                 </div>
                                 <div class="form-group">
                                     <label>Mật khẩu mới</label>
-                                    <input name="newPass" type="password" class="form-control" placeholder="Nhập mật khẩu mới">
+                                    <input name="newPass" minlength=6 type="password" class="form-control" placeholder="Nhập mật khẩu mới">
                                 </div>
                                 <div class="form-group">
                                     <label>Xác nhận mật khẩu mới</label>
-                                    <input name="confirmPass" type="password" class="form-control" placeholder="Nhập lại mật khẩu mới">
+                                    <input name="confirmPass" minlength=6 type="password" class="form-control" placeholder="Nhập lại mật khẩu mới">
                                 </div>
                              <!-- <a href="#" class="btn btn-main mt-20">Lưu và sửa đổi</a> -->
                              <button type="submit" class="btn btn-main text-center">Thay đổi mật khẩu</button>
