--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -11,7 +11,7 @@
           {{/if}}
           <form method='POST' class="text-left clearfix" action="#">
             <div class="form-group">
-              <input name='username' type="text" class="form-control" placeholder="Ten dang nhap">
+              <input name='username' type="text" class="form-control" placeholder="Tên đăng nhập">
             </div>
             <div class="form-group">
               <input name='password' type="password" class="form-control" placeholder="Mật khẩu">
