--- a/views/user/register.hbs
+++ b/views/user/register.hbs
@@ -11,16 +11,16 @@
           {{/if}}
           <form method="POST" class="text-left clearfix" action="#">
             <div class="form-group">
-              <input name="name" type="text" class="form-control"  placeholder="Ho ten">
+              <input name="name" type="text" class="form-control"  placeholder="Họ tên">
             </div>
             <div class="form-group">
               <input name="email" type="email" class="form-control"  placeholder="Email">
             </div>
             <div class="form-group">
-              <input name="username" type="text" class="form-control"  placeholder="Ten tai khoan">
+              <input name="username" type="text" class="form-control"  placeholder="Tên tài khoản">
             </div>
             <div class="form-group">
-              <input name="password" minlength=6 type="password" class="form-control"  placeholder="Mat khau">
+              <input name="password" minlength=6 type="password" class="form-control"  placeholder="Mật khẩu">
             </div>
             <div class="text-center">
               <button type="submit" class="btn btn-main text-center">Đăng kí</button>
