--- a/views/user/resetPassword.hbs
+++ b/views/user/resetPassword.hbs
@@ -11,10 +11,10 @@
           {{/if}}
           <form method='POST' class="text-left clearfix">
             <div class="form-group">
-              <input name="pass" type="password" class="form-control" id="exampleInputEmail1" placeholder="Nhập mật khẩu mới">
+              <input name="pass" type="password" minlength=6 class="form-control" id="exampleInputEmail1" placeholder="Nhập mật khẩu mới">
             </div>
             <div class="form-group">
-              <input name="confirmPass" type="password" class="form-control" id="exampleInputEmail1" placeholder="Xác nhận lại mật khẩu">
+              <input name="confirmPass" type="password" minlength=6 class="form-control" id="exampleInputEmail1" placeholder="Xác nhận lại mật khẩu">
             </div>
             <div class="text-center">
               <button type="submit" class="btn btn-main text-center">Làm mới mật khẩu</button>
