--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -9,7 +9,7 @@
           {{{createAlert this}}}
           {{/with}}
           {{/if}}
-          <form method='POST' class="text-left clearfix" action="#">
+          <form method='POST' class="text-left clearfix" action="/user/login">
             <div class="form-group">
               <input name='username' type="text" class="form-control" placeholder="Tên đăng nhập">
             </div>
