--- a/views/checkout/cart.hbs
+++ b/views/checkout/cart.hbs
@@ -41,7 +41,7 @@
                       <td class="">
                         <div class="product-info">
                           <img width="80" src="{{this.img}}" alt="" />
-                          <a href="">{{this.name}}</a>
+                          <a href="/product/{{this.id}}">{{this.name}}</a>
                         </div>
                       </td>
 											<td class="">{{this.quantity}}</td>
@@ -52,30 +52,6 @@
                     </tr>
 										{{/each}}
 										{{/if}}
-                    <!-- <tr class="">
-                      <td class="">
-                        <div class="product-info">
-                          <img width="80" src="/static/images/cart-1.jpg" alt="" />
-                          <a href="">Kính nam</a>
-                        </div>
-                      </td>
-                      <td class="">200000 đồng</td>
-                      <td class="">
-                        <a class="product-remove" href="">Xóa</a>
-                      </td>
-                    </tr>
-                    <tr class="">
-                      <td class="">
-                        <div class="product-info">
-                          <img width="80" src="/static/images/cart-1.jpg" alt="" />
-                          <a href="">Kính nam</a>
-                        </div>
-                      </td>
-                      <td class="">200000 đồng</td>
-                      <td class="">
-                        <a class="product-remove" href="">Xóa</a>
-                      </td>
-                    </tr> -->
                   </tbody>
                 </table>
                 <a href="/checkout/payment" class="btn btn-main pull-right">Mua</a>
